--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,38 +1,1 @@
-<input type="text" [(ngModel)]="title">
-{{ title }}
-
-<div *ngIf="title === 'angel'">
-  esto es un div
-</div>
-
-<div>
-  <span [ngSwitch]="title">
-    <p *ngSwitchCase="'angel'">
-      SOy Angel
-    </p>
-    <p *ngSwitchCase="'nicolas'">
-      Soy Nicolas
-    </p>
-    <p *ngSwitchCase="'carlos'">
-      Soy Carlos
-    </p>
-    <p *ngSwitchDefault>
-      No soy nada
-    </p>
-  </span>
-</div>
-
-
-<button (click)="addItem()" >Add</button>
-<ul>
-  <li *ngIf="items.length === 0">La lista esta vacia</li>
-  <li *ngFor="let name of items; index as i">
-    {{ i }}: {{ name }}
-    <button (click)="deleteItem(i)">delete</button>
-  </li>
-</ul>
-
-
-<div *ngFor="let product of products">
-  <app-product (productClicked)="clickProduct($event)" [product]="product"></app-product>
-</div>
+<router-outlet></router-outlet>
