--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,7 +1,20 @@
-<h3 appHightlight>{{ product.title | uppercase }}</h3>
+<mat-card>
+    <mat-card-header>
+        <mat-card-title>{{ product.title | uppercase }}</mat-card-title>
+        <mat-card-subtitle>{{product.price | currency}}</mat-card-subtitle>
+    </mat-card-header>
+    <img [src]="product.image" alt="">
+    <mat-card-content>
+        <p>{{ product.description | slice:0:10 }}</p>
+    </mat-card-content>
+    <mat-card-actions>
+        <button mat-raised-button color="accent" (click)="addCart()">Agregar al Carrito</button>
+        <a mat-raised-button [routerLink]="['/products', product.id]">Ver detalle</a>
+    </mat-card-actions>
+</mat-card>
+
+<!-- <h3 appHightlight>{{ product.title | uppercase }}</h3>
 <img [src]="product.image" alt="">
 <strong>{{product.price | currency}}</strong>
 <p>{{ product.description | slice:0:10 }}</p>
-<p>{{ today | date:'HH:mm' }}</p>
-<button (click)="addCart()">Agregar al Carrito</button>
-<a [routerLink]="['/products', product.id]">Ver detalle</a>
+<p>{{ today | date:'HH:mm' }}</p> -->
