--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -1,9 +1,8 @@
 :host{
-    margin: 2px;
-    border-radius: 5px;
-    border: 1px solid black;
-    display: block;
 }
 img{
     max-width: 100%;
+    height: 300px;
+    object-fit: contain;
+    object-position: center;
 }
