--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    margin: 0;
-    padding: 0;
-}
-
 .product-grid{
     display: grid;
+    margin: 0px 15px;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     align-items: flex-start;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
