--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -24,7 +24,7 @@
                 </a>
             </nav>
 
-            <a mat-raised-button matBadge="3" matBadgeColor="warn">
+            <a routerLink="/order" mat-raised-button [matBadge]="total$ | async" matBadgeColor="warn">
                 <mat-icon>shopping_cart</mat-icon>
                 Carrito
             </a>
