--- a/src/app/admin/components/nav/nav.component.html
+++ b/src/app/admin/components/nav/nav.component.html
@@ -12,6 +12,7 @@
       <a mat-list-item routerLink="/admin/dash">Ir a DashBoard</a>
       <a mat-list-item routerLink="/admin/tree">Ir al Arbol</a>
       <a mat-list-item routerLink="/admin/elements">Ver elementos</a>
+      <button mat-list-item (click)="logout()">Log out</button>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
