--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -7,20 +7,25 @@
                 routerLinkActive="active">
                     Home
                 </a>
-            
+
                 <a mat-button routerLink="/products"
                 routerLinkActive="active">
                     Products
                 </a>
-            
+
                 <a mat-button routerLink="/contact"
                 routerLinkActive="active">
                     Contact
                 </a>
-            
+
                 <a mat-button routerLink="/demo"
                 routerLinkActive="active">
                     Demo
+                </a>
+
+                <a mat-button routerLink="/auth"
+                routerLinkActive="active">
+                    Login
                 </a>
             </nav>
 
