--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,5 +1,5 @@
-<h2>Register</h2>
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<h2>Login</h2>
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
         <label for="firstName">Email</label>
         <input type="text" formControlName="email" class="form-control">
@@ -11,8 +11,8 @@
     <div class="form-group">
         <button [disabled]="loading" class="btn btn-primary">
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Register
+            Login
         </button>
-        <a routerLink="/auth/login" class="btn btn-link">Login</a>
+        <a routerLink="/auth/register" class="btn btn-link">Register</a>
     </div>
 </form>
