--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -13,6 +13,11 @@
             <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
             Login
         </button>
+        <button [disabled]="loading" type="button" class="btn btn-primary"
+        (click)="loginApi()">
+            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+            Login api
+        </button>
         <a routerLink="/auth/register" class="btn btn-link">Register</a>
     </div>
 </form>
