--- a/src/app/products/containers/product-detail/product-detail.component.html
+++ b/src/app/products/containers/product-detail/product-detail.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="product">
+<div *ngIf="(product$ | async) as product">
     <div>
         <img [src]="product.image" alt="">
     </div>
@@ -13,4 +13,6 @@
     <button (click)="createProduct()">Crear</button>
     <button (click)="updateProduct()">Actualizar</button>
     <button (click)="deleteProduct()">Eliminar</button>
+    <button (click)="getRamdomUsers()">Users</button>
+    <button (click)="getFile()">Get file</button>
 </div>
